--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -43,7 +43,9 @@
   <ItemGroup>
     <Compile Include="EmployeeRepository.cs" />
     <Compile Include="IRepository.cs" />
+    <Compile Include="ProjectRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaskRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DatabaseBroker\DatabaseBroker.csproj">
