--- a/UserInterface/UserInterface.csproj
+++ b/UserInterface/UserInterface.csproj
@@ -72,11 +72,17 @@
     <Compile Include="UserControls\Employee\UCAddEmployee.Designer.cs">
       <DependentUpon>UCAddEmployee.cs</DependentUpon>
     </Compile>
-    <Compile Include="UserControls\Employee\UCEmployeeStats.cs">
+    <Compile Include="UserControls\Employee\UCTopEmployees.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UserControls\Employee\UCEmployeeStats.Designer.cs">
-      <DependentUpon>UCEmployeeStats.cs</DependentUpon>
+    <Compile Include="UserControls\Employee\UCTopEmployees.Designer.cs">
+      <DependentUpon>UCTopEmployees.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Employee\UCEmployeeKPI.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\Employee\UCEmployeeKPI.Designer.cs">
+      <DependentUpon>UCEmployeeKPI.cs</DependentUpon>
     </Compile>
     <Compile Include="UserControls\Employee\UCSearchEmployees.cs">
       <SubType>UserControl</SubType>
@@ -129,8 +135,11 @@
     <EmbeddedResource Include="UserControls\Employee\UCAddEmployee.resx">
       <DependentUpon>UCAddEmployee.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UserControls\Employee\UCEmployeeStats.resx">
-      <DependentUpon>UCEmployeeStats.cs</DependentUpon>
+    <EmbeddedResource Include="UserControls\Employee\UCTopEmployees.resx">
+      <DependentUpon>UCTopEmployees.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\Employee\UCEmployeeKPI.resx">
+      <DependentUpon>UCEmployeeKPI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserControls\Employee\UCSearchEmployees.resx">
       <DependentUpon>UCSearchEmployees.cs</DependentUpon>
